# llmwiki

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLAUDE_CODE_EXTERNAL_SETUP.md  CLAUDE_USAGE.md  KARPATHY_ALIGNMENT.md  LOGIC_DETAILS.md  OPEN_SOURCE_RESEARCH.md  SECURITY_HARDENING.md  SYSTEM_DESIGN.md
src/llm_wiki/: __init__.py  answerer.py  audit.py  claude_client.py  cli.py  constants.py  demo_workspace.py  extractors.py  indexer.py  mcp_runtime.py  mcp_server.py  models.py  question_parser.py  reporting.py  security.py  wiki_workspace.py
tests/: test_claude_client.py  test_claude_engine.py  test_cli_features.py  test_e2e.py  test_extractors_and_fix_actions.py  test_mcp_runtime.py  test_mcp_server.py  test_parser_and_security.py  test_security_hardening.py  test_wiki_workspace.py
