[project]
name = "llm-wiki"
version = "0.1.0"
description = "Claude Code oriented LLM Wiki workbench with raw/wiki/schema architecture."
requires-python = ">=3.11"
dependencies = [
  "openpyxl",
  "pandas",
  "matplotlib",
  "lxml",
  "mcp",
]

[project.scripts]
llm-wiki = "llm_wiki.cli:main"
llm-wiki-mcp = "llm_wiki.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
